# dmc-open-miner

./: .gitignore  README.md
doc/: db.sql  eos-config.toml  how to use.md  lite-server-config.toml
doc/miner-config-example/: account-config.toml  contract-config.toml  eos-config.toml  gateway_config.toml  node_config.toml
src/: Cargo.toml  build-miner-servers.bat  build-miner-servers.sh  build-open-miner.bat  build-open-miner.sh  build-user.bat  build-user.sh
src/common/: Cargo.toml
src/common/src/: error.rs  lib.rs  log_utils.rs  sqlx_types.rs  utils.rs
src/common/src/chain/: client.rs  mod.rs  types.rs
src/common/src/challenge/: merkle.rs  mod.rs
src/eos/: Cargo.toml
src/eos/src/: buffer.rs  client.rs  key.rs  lib.rs  listener.rs  rpc.rs  types.rs
src/miner/account/client/: Cargo.toml
src/miner/account/client/src/: http_client.rs  types.rs
src/miner/account/server/: Cargo.toml
src/miner/account/server/src/: backend.rs  lib.rs  main.rs
src/miner/client/: Cargo.toml
src/miner/client/src/: main.rs
src/miner/contracts/: Cargo.toml
src/miner/contracts/src/: backend.rs  http_client.rs  main.rs  types.rs
src/miner/journal/: Cargo.toml
src/miner/journal/src/: backend.rs  http_client.rs  main.rs  types.rs
src/miner/lite-server/: Cargo.toml
src/miner/lite-server/src/: config.rs  main.rs
src/miner/sectors/client/: Cargo.toml
src/miner/sectors/client/src/: http_client.rs  lib.rs  types.rs
src/miner/sectors/gateway/: Cargo.toml
src/miner/sectors/gateway/src/: backend.rs  http_client.rs  lib.rs  main.rs  types.rs
src/miner/sectors/node/: Cargo.toml
src/miner/sectors/node/src/: backend.rs  http_client.rs  lib.rs  main.rs  types.rs
src/spv/: Cargo.toml
src/spv/src/: backend.rs  http_client.rs  lib.rs  main.rs  types.rs
src/tests/: Cargo.toml
src/tests/examples/: apply_contract.rs  check_miner_config.rs  lite_service.rs  lite_service_client.toml  order_bill.rs
src/tests/src/: apply_contract.rs  fake_chain.rs  lib.rs  order_bill.rs  prelude.rs
src/tests/tests/: apply_contract.rs
src/user/account/client/: Cargo.toml
src/user/account/client/src/: http_client.rs  lib.rs  types.rs
src/user/account/server/: Cargo.toml
src/user/account/server/src/: backend.rs
src/user/contracts/: Cargo.toml
src/user/contracts/src/: backend.rs  http_client.rs  lib.rs  types.rs
src/user/journal/: Cargo.toml
src/user/journal/src/: backend.rs  http_client.rs  lib.rs  types.rs
src/user/lite-client/: Cargo.toml
src/user/lite-client/src/: main.rs
src/user/lite-server/: Cargo.toml
src/user/lite-server/src/: config.rs  main.rs
src/user/source/: Cargo.toml
src/user/source/src/: backend.rs  http_client.rs  types.rs
