[package]
name = "dmc-tools-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = '1.11', features = ['attributes', 'unstable'] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
generic-array = { version = '*', default-features = false, features = ['serde'] }
json = "0.12.4"
rand = "0.8.5"
libsecp256k1 = "0.7.0"
base58 = "0.2.0"
base64 = "0.13.0"
ripemd = "0.1.1"
surf = { version = '2.3.2', default-features = false, features = ['h1-client-rustls'] }
sha2 = "0.10.2"
hex = "0.4.3"
tracing = { version = "0.1", features = ["log-always"]}
log = "=0.4"
md5 = "0.7.0"
flate2 = "1.0.23"
tide = "0.16.0"
url = '2.2'
http-types = '2.12'
int-enum = '0.4'
regex = "1.5.5"
futures = "0.3.21"
chrono = "0.4.19"
async-trait = "0.1.53"
async-recursion = "1.0.0"
sqlx = { version = '0.6', features = ["runtime-async-std-rustls", "mysql", "sqlite"] }
rs_merkle = "1.3"
flexi_logger = "*"
