[package]
name = "dmc-eos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
async-trait = "0.1.53"
async-std = {version = "1.12"}
futures = "0.3.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dmc-tools-common = { path = '../common' }
hex = {version = "0.4", features = ["serde"]}
regex = "1.5.5"
libsecp256k1 = "0.7.0"
rand = "0.8.5"
base58 = "0.2.0"
base64 = "0.13.0"
ripemd = "0.1.1"
sha2 = "0.10.2"
chrono = "0.4.19"
url = '2.2'
tide = "0.14.0"
surf = { version = '2.3.2', default-features = false, features = ['h1-client-rustls'] }
simple_logger = "4"