[package]
name = "dmc_tools_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["fake", "sqlite"]
fake = []
eos = ["dmc-eos"]
sqlite = ["dmc-user-journal/sqlite", "dmc-user-sources/sqlite", "dmc-user-account-server/sqlite", "dmc-user-contracts/sqlite"]
mysql = ["dmc-user-journal/mysql", "dmc-user-sources/mysql", "dmc-user-account-server/mysql", "dmc-user-contracts/mysql"]

[dependencies]
log = "*"
env_logger = "*"
sqlx = { version = "0.6", features = ["runtime-async-std-rustls", "sqlite", "macros" ] }
async-std = {version = "*", features = ['tokio1']}
tokio = {version = "1.27", features = ["macros"]}
async-trait = "0.1.53"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
tide = "0.14.0"
surf = { version = '2.3.2', default-features = false, features = ['h1-client-rustls'] }
toml = "*"
url_params_serializer = "*"
rand = "*"
sha2 = "0.10.2"
hex = "0.4"
futures = { version = '0.3', features = ['default', 'thread-pool'] }
dmc-tools-common = { path = '../common' }
dmc-miner-journal = { path = '../miner/journal' }
dmc-miner-account-server = { path = '../miner/account/server'}
dmc-miner-account-client = { path = '../miner/account/client' }
dmc-miner-sectors-client = { path = '../miner/sectors/client' }
dmc-miner-sectors-node = { path = '../miner/sectors/node' }
dmc-miner-sectors-gateway = { path = '../miner/sectors/gateway' }
dmc-miner-contracts = { path = '../miner/contracts' }
dmc-user-journal = { path = '../user/journal' }
dmc-user-sources = { path = '../user/source' }
dmc-user-account-server = { path = '../user/account/server' }
dmc-user-account-client = { path = '../user/account/client' }
dmc-user-contracts = { path = '../user/contracts' }
dmc-spv = {path = '../spv'}
dmc-eos = {path = '../eos', optional = true}