[package]
name = "dmc-miner-contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["eos"]
eos = ["dmc-eos"]

[dependencies]
log = "*"
sqlx = { version = "0.6", features = ["runtime-async-std-rustls", "mysql", "macros" ] }
async-std = {version = "1.12", features = ["tokio1"]}
tokio = {version = "1.27", features = ["macros"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
tide = "0.14.0"
surf = { version = '2.3.2', default-features = false, features = ['h1-client-rustls'] }
async-recursion = "1.0.0"
toml = "*"
hex = "0.4.3"
sha2 = "0.10.2"
url_params_serializer = "*"
flexi_logger = "0.25"
dmc-tools-common = { path = '../../common' }
dmc-miner-journal = { path = "../journal" }
dmc-miner-sectors-client = { path = '../sectors/client' }
dmc-eos = {path = "../../eos", optional = true}

