[package]
name = "dmc-user-contracts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sqlite", "eos"]
sqlite = ["sqlx/sqlite", "dmc-user-journal/sqlite", "dmc-user-sources/sqlite"]
mysql = ["sqlx/mysql", "dmc-user-journal/mysql", "dmc-user-sources/mysql"]
eos = ["dmc-eos"]

[dependencies]
log = "*"
sqlx = { version = "0.6", features = ["runtime-async-std-rustls", "macros" ] }
async-trait = "0.1.53"
async-std = "*"
async-recursion = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
tide = "0.14.0"
surf = { version = '2.3.2', default-features = false, features = ['h1-client-rustls'] }
toml = "*"
url_params_serializer = "*"
hex = "0.4.3"
sha2 = "0.10.2"
dmc-tools-common = { path = '../../common' }
dmc-user-journal = { path = '../journal' }
dmc-user-sources = { path = '../source' }
dmc-miner-contracts = { path = '../../miner/contracts' }
dmc-eos = { path = '../../eos', optional = true }

