[package]
name = "dmc-user-account-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sqlite", "eos"]
sqlite = ["sqlx/sqlite", "dmc-user-journal/sqlite", "dmc-user-sources/sqlite", "dmc-user-contracts/sqlite"]
mysql = ["sqlx/mysql", "dmc-user-journal/mysql", "dmc-user-sources/mysql", "dmc-user-contracts/mysql"]
eos = ["dmc-eos"]

[dependencies]
log = "*"
sqlx = { version = "0.6", features = ["runtime-async-std-rustls", "macros" ] }
async-trait = "0.1.53"
async-std = "*"
async-recursion = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
tide = "0.14.0"
surf = { version = '2.3.2', default-features = false, features = ['h1-client-rustls'] }
toml = "*"
hex = "0.4.3"
url_params_serializer = "*"
rs_merkle = "1.3"
dmc-tools-common = { path = '../../../common' }
dmc-user-journal = { path = '../../journal' }
dmc-user-sources = { path = '../../source' }
dmc-user-account-client = { path = '../client' }
dmc-user-contracts = { path = '../../contracts' }
dmc-spv = {path = '../../../spv'}
dmc-eos = { path = '../../../eos', optional = true }
